refactor(dhcp): expose RESTful lease API
