# bindings/go/dhcp/model_ip_version.go
@@ -1,0 +1,110 @@
+/*
+DHCP API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 0.1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package dhcp
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// IpVersion Supported DHCP address families.
+type IpVersion int32
+
+// List of IpVersion
+const (
+	_4 IpVersion = 4
+	_6 IpVersion = 6
+)
+
+// All allowed values of IpVersion enum
+var AllowedIpVersionEnumValues = []IpVersion{
+	4,
+	6,
+}
+
+func (v *IpVersion) UnmarshalJSON(src []byte) error {
+	var value int32
+	err := json.Unmarshal(src, &value)
+	if err != nil {
+		return err
+	}
+	enumTypeValue := IpVersion(value)
+	for _, existing := range AllowedIpVersionEnumValues {
+		if existing == enumTypeValue {
+			*v = enumTypeValue
+			return nil
+		}
+	}
+
+	return fmt.Errorf("%+v is not a valid IpVersion", value)
+}
+
+// NewIpVersionFromValue returns a pointer to a valid IpVersion
+// for the value passed as argument, or an error if the value passed is not allowed by the enum
+func NewIpVersionFromValue(v int32) (*IpVersion, error) {
+	ev := IpVersion(v)
+	if ev.IsValid() {
+		return &ev, nil
+	} else {
+		return nil, fmt.Errorf("invalid value '%v' for IpVersion: valid values are %v", v, AllowedIpVersionEnumValues)
+	}
+}
+
+// IsValid return true if the value is valid for the enum, false otherwise
+func (v IpVersion) IsValid() bool {
+	for _, existing := range AllowedIpVersionEnumValues {
+		if existing == v {
+			return true
+		}
+	}
+	return false
+}
+
+// Ptr returns reference to IpVersion value
+func (v IpVersion) Ptr() *IpVersion {
+	return &v
+}
+
+type NullableIpVersion struct {
+	value *IpVersion
+	isSet bool
+}
+
+func (v NullableIpVersion) Get() *IpVersion {
+	return v.value
+}
+
+func (v *NullableIpVersion) Set(val *IpVersion) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableIpVersion) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableIpVersion) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableIpVersion(val *IpVersion) *NullableIpVersion {
+	return &NullableIpVersion{value: val, isSet: true}
+}
+
+func (v NullableIpVersion) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableIpVersion) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
