# bindings/go/dhcp/model_lease_arguments.go
@@ -1,156 +1,0 @@
-/*
-DHCP API
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package dhcp
-
-import (
-	"bytes"
-	"encoding/json"
-	"fmt"
-)
-
-// checks if the LeaseArguments type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &LeaseArguments{}
-
-// LeaseArguments Arguments accepted by the supported KEA lease commands.
-type LeaseArguments struct {
-	IpAddress string `json:"ip-address"`
-}
-
-type _LeaseArguments LeaseArguments
-
-// NewLeaseArguments instantiates a new LeaseArguments object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewLeaseArguments(ipAddress string) *LeaseArguments {
-	this := LeaseArguments{}
-	this.IpAddress = ipAddress
-	return &this
-}
-
-// NewLeaseArgumentsWithDefaults instantiates a new LeaseArguments object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewLeaseArgumentsWithDefaults() *LeaseArguments {
-	this := LeaseArguments{}
-	return &this
-}
-
-// GetIpAddress returns the IpAddress field value
-func (o *LeaseArguments) GetIpAddress() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.IpAddress
-}
-
-// GetIpAddressOk returns a tuple with the IpAddress field value
-// and a boolean to check if the value has been set.
-func (o *LeaseArguments) GetIpAddressOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.IpAddress, true
-}
-
-// SetIpAddress sets field value
-func (o *LeaseArguments) SetIpAddress(v string) {
-	o.IpAddress = v
-}
-
-func (o LeaseArguments) MarshalJSON() ([]byte, error) {
-	toSerialize, err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o LeaseArguments) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["ip-address"] = o.IpAddress
-	return toSerialize, nil
-}
-
-func (o *LeaseArguments) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := map[string]bool{
-		"ip-address": false,
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err
-	}
-
-	for requiredProperty, nullable := range requiredProperties {
-		if value, exists := allProperties[requiredProperty]; !exists || (value == nil && !nullable) {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varLeaseArguments := _LeaseArguments{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varLeaseArguments)
-
-	if err != nil {
-		return err
-	}
-
-	*o = LeaseArguments(varLeaseArguments)
-
-	return err
-}
-
-type NullableLeaseArguments struct {
-	value *LeaseArguments
-	isSet bool
-}
-
-func (v NullableLeaseArguments) Get() *LeaseArguments {
-	return v.value
-}
-
-func (v *NullableLeaseArguments) Set(val *LeaseArguments) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableLeaseArguments) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableLeaseArguments) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableLeaseArguments(val *LeaseArguments) *NullableLeaseArguments {
-	return &NullableLeaseArguments{value: val, isSet: true}
-}
-
-func (v NullableLeaseArguments) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableLeaseArguments) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
