# bindings/go/dhcp/model_lease_request.go
@@ -1,212 +1,0 @@
-/*
-DHCP API
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package dhcp
-
-import (
-	"bytes"
-	"encoding/json"
-	"fmt"
-)
-
-// checks if the LeaseRequest type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &LeaseRequest{}
-
-// LeaseRequest Restricted KEA command envelope for IPv4 lease operations.
-type LeaseRequest struct {
-	Arguments LeaseArguments `json:"arguments"`
-	Command   string         `json:"command"`
-	Service   []string       `json:"service"`
-}
-
-type _LeaseRequest LeaseRequest
-
-// NewLeaseRequest instantiates a new LeaseRequest object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewLeaseRequest(arguments LeaseArguments, command string, service []string) *LeaseRequest {
-	this := LeaseRequest{}
-	this.Arguments = arguments
-	this.Command = command
-	this.Service = service
-	return &this
-}
-
-// NewLeaseRequestWithDefaults instantiates a new LeaseRequest object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewLeaseRequestWithDefaults() *LeaseRequest {
-	this := LeaseRequest{}
-	return &this
-}
-
-// GetArguments returns the Arguments field value
-func (o *LeaseRequest) GetArguments() LeaseArguments {
-	if o == nil {
-		var ret LeaseArguments
-		return ret
-	}
-
-	return o.Arguments
-}
-
-// GetArgumentsOk returns a tuple with the Arguments field value
-// and a boolean to check if the value has been set.
-func (o *LeaseRequest) GetArgumentsOk() (*LeaseArguments, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Arguments, true
-}
-
-// SetArguments sets field value
-func (o *LeaseRequest) SetArguments(v LeaseArguments) {
-	o.Arguments = v
-}
-
-// GetCommand returns the Command field value
-func (o *LeaseRequest) GetCommand() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Command
-}
-
-// GetCommandOk returns a tuple with the Command field value
-// and a boolean to check if the value has been set.
-func (o *LeaseRequest) GetCommandOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Command, true
-}
-
-// SetCommand sets field value
-func (o *LeaseRequest) SetCommand(v string) {
-	o.Command = v
-}
-
-// GetService returns the Service field value
-func (o *LeaseRequest) GetService() []string {
-	if o == nil {
-		var ret []string
-		return ret
-	}
-
-	return o.Service
-}
-
-// GetServiceOk returns a tuple with the Service field value
-// and a boolean to check if the value has been set.
-func (o *LeaseRequest) GetServiceOk() ([]string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return o.Service, true
-}
-
-// SetService sets field value
-func (o *LeaseRequest) SetService(v []string) {
-	o.Service = v
-}
-
-func (o LeaseRequest) MarshalJSON() ([]byte, error) {
-	toSerialize, err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o LeaseRequest) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["arguments"] = o.Arguments
-	toSerialize["command"] = o.Command
-	toSerialize["service"] = o.Service
-	return toSerialize, nil
-}
-
-func (o *LeaseRequest) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := map[string]bool{
-		"arguments": false,
-		"command":   false,
-		"service":   false,
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err
-	}
-
-	for requiredProperty, nullable := range requiredProperties {
-		if value, exists := allProperties[requiredProperty]; !exists || (value == nil && !nullable) {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varLeaseRequest := _LeaseRequest{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varLeaseRequest)
-
-	if err != nil {
-		return err
-	}
-
-	*o = LeaseRequest(varLeaseRequest)
-
-	return err
-}
-
-type NullableLeaseRequest struct {
-	value *LeaseRequest
-	isSet bool
-}
-
-func (v NullableLeaseRequest) Get() *LeaseRequest {
-	return v.value
-}
-
-func (v *NullableLeaseRequest) Set(val *LeaseRequest) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableLeaseRequest) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableLeaseRequest) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableLeaseRequest(val *LeaseRequest) *NullableLeaseRequest {
-	return &NullableLeaseRequest{value: val, isSet: true}
-}
-
-func (v NullableLeaseRequest) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableLeaseRequest) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
